On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   CZMLBillboardMaker.py
	modified:   CZMLBillboardMaker_dialog_base.ui
	new file:   cesiumPreview.py
	modified:   help/build/doctrees/environment.pickle
	modified:   help/build/doctrees/index.doctree
	modified:   help/build/html/.buildinfo
	modified:   help/build/html/_static/basic.css
	modified:   help/build/html/_static/classic.css
	modified:   help/build/html/_static/doctools.js
	modified:   help/build/html/_static/jquery.js
	modified:   help/build/html/_static/language_data.js
	modified:   help/build/html/_static/pygments.css
	modified:   help/build/html/_static/searchtools.js
	modified:   help/build/html/_static/sidebar.js
	modified:   help/build/html/_static/underscore.js
	modified:   help/build/html/genindex.html
	modified:   help/build/html/index.html
	modified:   help/build/html/search.html
	modified:   help/build/html/searchindex.js
	modified:   pb_tool.cfg

--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -48,7 +48,7 @@ plugin_path:
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py CZMLBillboardMaker.py CZMLBillboardMaker_dialog.py Metadata.py
+python_files: __init__.py CZMLBillboardMaker.py CZMLBillboardMaker_dialog.py Metadata.py cesiumPreview.py
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: CZMLBillboardMaker_dialog_base.ui
